dog profile image

--- a/DogT/DogT.csproj
+++ b/DogT/DogT.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Videos\" />
+    <Folder Include="wwwroot\Avatars\" />
   </ItemGroup>
 
 </Project>
